--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hola como estas?
+<html>
+    <h1>Rodrigo Valdés</h1>
+    <a>Mi nombre es Rodrigo Valdés chileno tengo 40 años y vivo en Santiago de Chile.
+        Esta es una web para la Actividad 2 del curso Cloud & Devops: Transofrmación digital MIT Online 2021.
+    </a>
+</html>
