--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
-    <head></head>
+    <head>
+    <style>
+        h1, h2, p {
+        text-align: center;
+        color: red;
+        }
+    </style>
+    </head>
     <body>
         <h1>Rodrigo Valdés</h1>
         <a>Mi nombre es Rodrigo Valdés chileno tengo 40 años y vivo en Santiago de Chile.
