--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <html>
     <head>
-    <style>
-        h1, h2, p {
-        text-align: center;
-        color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Rodrigo Valdés</h1>
