--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Rodrigo Valdés</h1>
-        <a>Mi nombre es Rodrigo Valdés chileno tengo 40 años y vivo en Santiago de Chile.</a>
-        <a>Esta es una web para la Actividad 2 del curso Cloud & Devops: Transofrmación digital MIT Online 2021.</a>
+        <p>Mi nombre es Rodrigo Valdés chileno tengo 40 años y vivo en Santiago de Chile.</p>
+        <p>Esta es una web para la Actividad 2 del curso Cloud & Devops: Transofrmación digital MIT Online 2021.</p>
     </body>
 </html>
