--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
         <h1>Rodrigo Valdés</h1>
         <p>Mi nombre es Rodrigo Valdés chileno tengo 40 años y vivo en Santiago de Chile.</p>
         <p>Esta es una web para la Actividad 2 del curso Cloud & Devops: Transofrmación digital MIT Online 2021.</p>
+        <hr>
+        <p> Este es otro párrafo. </p>
     </body>
 </html>
